--- a/index.html
+++ b/index.html
@@ -2,25 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./style.css">
         <title>Landing Page</title>
     </head>
     <body>
 
-        <div class="header">
-            <ul>
-                <li>Header Logo</li>
+        <div class="hero">
+            <ul class="header">
+                <div class="logo">
+                    <li>Header Logo</li>
+                </div>
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
+            <div class="content">
+                <div class="left">
+                    <p class="main">This website is awesome</p>
+                    <p class="sub">This website has some subtext that goes under the main title. It's a smaller text and the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="right">
+                    this a placeholder for an image
+                </div>
+            </div>
         </div>
-
-        <div class="hero-content">
-            <p>This website is awesome</p>
-            <p>This website has some subtext that goes under the main title. It's a smaller text and the color is lower contrast</p>
-            <button>Sign up</button>
-        </div>
-        <img src="#" alt="this a placeholder for an image">
 
     </body>
 </html>
