--- a/index.html
+++ b/index.html
@@ -28,5 +28,27 @@
             </div>
         </div>
 
+        <div class="random">
+            <h6 class="header">Some random information</h6>
+            <div class="content">
+                <div class="card">
+                    <div class="blank"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="blank"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="blank"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="blank"></div>
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
