Add styles for random section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="random">
-            <h6 class="header">Some random information</h6>
+            <p class="header">Some random information.</p>
             <div class="content">
                 <div class="card">
                     <div class="blank"></div>
