Add CTA section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
             <p class="sub">-Thor, God of Thunder</p>
         </div>
 
+        <div class="cta">
+            <div class="main">
+                <p class="header">Call to action! It's time!</p>
+                <p class="sub">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+
     </body>
 </html>
