Add styling for CTA section

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
         </div>
 
         <div class="cta">
-            <div class="main">
-                <p class="header">Call to action! It's time!</p>
-                <p class="sub">Sign up for our product by clicking that button right over there!</p>
+            <div class="container">
+                <div class="main">
+                    <p class="header">Call to action! It's time!</p>
+                    <p class="sub">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
 
     </body>
