--- a/index.html
+++ b/index.html
@@ -65,5 +65,9 @@
             </div>
         </div>
 
+        <div class="footer">
+            Copyright &copy; The Odin Project 2024
+        </div>
+
     </body>
 </html>
